--- a/app/src/main/res/layout/activity_sign_up_customer.xml
+++ b/app/src/main/res/layout/activity_sign_up_customer.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SignUp_Owner">
+    tools:context=".SignUp_Customer">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
