Added Sign Up page for shopper

--- a/app/src/main/res/layout/activity_sign_up_shopper.xml
+++ b/app/src/main/res/layout/activity_sign_up_shopper.xml
@@ -7,20 +7,12 @@
     android:orientation="vertical"
     android:gravity="center"
     android:padding="15dp"
-    tools:context=".Login"
+    tools:context=".SignUp_Customer"
     android:background="@drawable/login_background">
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="25dp"
-        app:srcCompat="@drawable/logo3"
-        android:contentDescription="@string/logo"/>
-
     <TextView
-        android:text="@string/welcome_back"
-        android:textSize="25sp"
+        android:text="@string/sign_up"
+        android:textSize="30sp"
         android:textStyle="bold"
         android:gravity="center"
         android:textColor="#ffffff"
@@ -28,6 +20,25 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         />
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp"
+        android:textColorHint="@color/white"
+        app:hintEnabled="false"
+        android:gravity="center">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/Username"
+            android:layout_width="260dp"
+            android:layout_height="50dp"
+            android:background="@drawable/rounded_buttons"
+            android:textColor="@color/white"
+            android:hint="@string/username" />
+
+    </com.google.android.material.textfield.TextInputLayout>
+
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -64,20 +75,30 @@
 
     </com.google.android.material.textfield.TextInputLayout>
 
+    <com.google.android.material.textfield.TextInputLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp"
+        android:textColorHint="@color/white"
+        app:hintEnabled="false"
+        android:gravity="center">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/confirm_password"
+            android:layout_width="260dp"
+            android:layout_height="50dp"
+            android:background="@drawable/rounded_buttons"
+            android:textColor="@color/white"
+            android:hint="@string/confirm_password" />
+
+    </com.google.android.material.textfield.TextInputLayout>
+
     <Button
-        android:id="@+id/login_btn"
+        android:id="@+id/sign_up_btn"
         android:layout_width="260dp"
         android:layout_height="wrap_content"
         android:backgroundTint="@color/white"
-        android:text="@string/login"
+        android:text="@string/sign_up"
         android:textColor="@color/d32966" />
-    <TextView
-        android:id="@+id/new_sign_up"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/new_sign_up"
-        android:gravity="center"
-        android:textColor="@color/white"
-        android:layout_marginTop="8dp"
-        />
+
 </LinearLayout>
