--- a/app/src/main/res/layout/activity_sign_up_seller.xml
+++ b/app/src/main/res/layout/activity_sign_up_seller.xml
@@ -66,7 +66,7 @@
         android:gravity="center">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/email"
+            android:id="@+id/owner_email"
             android:layout_width="260dp"
             android:layout_height="50dp"
             android:background="@drawable/rounded_buttons"
@@ -84,7 +84,7 @@
         android:gravity="center">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/password"
+            android:id="@+id/owner_password"
             android:layout_width="260dp"
             android:layout_height="50dp"
             android:background="@drawable/rounded_buttons"
@@ -102,7 +102,7 @@
         android:gravity="center">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/confirm_password"
+            android:id="@+id/confirm_password_owner"
             android:layout_width="260dp"
             android:layout_height="50dp"
             android:background="@drawable/rounded_buttons"
@@ -112,7 +112,7 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <Button
-        android:id="@+id/sign_up_btn"
+        android:id="@+id/sign_up_btn_owner"
         android:layout_width="260dp"
         android:layout_height="wrap_content"
         android:backgroundTint="@color/white"
