--- a/app/src/main/res/layout/activity_sign_up_shopper.xml
+++ b/app/src/main/res/layout/activity_sign_up_shopper.xml
@@ -48,7 +48,7 @@
         android:gravity="center">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/email"
+            android:id="@+id/cust_email"
             android:layout_width="260dp"
             android:layout_height="50dp"
             android:background="@drawable/rounded_buttons"
@@ -66,7 +66,7 @@
         android:gravity="center">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/password"
+            android:id="@+id/cust_password"
             android:layout_width="260dp"
             android:layout_height="50dp"
             android:background="@drawable/rounded_buttons"
@@ -84,7 +84,7 @@
         android:gravity="center">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/confirm_password"
+            android:id="@+id/confirm_password_cust"
             android:layout_width="260dp"
             android:layout_height="50dp"
             android:background="@drawable/rounded_buttons"
@@ -94,7 +94,7 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <Button
-        android:id="@+id/sign_up_btn"
+        android:id="@+id/sign_up_btn_cust"
         android:layout_width="260dp"
         android:layout_height="wrap_content"
         android:backgroundTint="@color/white"
