--- a/app/src/main/res/layout/activity_who_are_you_page.xml
+++ b/app/src/main/res/layout/activity_who_are_you_page.xml
@@ -12,7 +12,7 @@
         android:id="@+id/ShopperButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Shopper"
+        android:text="@string/shopper"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.724"
@@ -24,7 +24,7 @@
         android:id="@+id/SellerButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Seller"
+        android:text="@string/seller"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.306"
@@ -37,9 +37,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:text="Who are you?"
+        android:text="@string/who_are_you"
         android:textColor="@color/white"
-        android:textSize="30dp"
+        android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
