--- a/app/src/main/res/layout/activity_sign_up_seller.xml
+++ b/app/src/main/res/layout/activity_sign_up_seller.xml
@@ -48,7 +48,7 @@
         android:gravity="center">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/category"
+            android:id="@+id/username_owner"
             android:layout_width="260dp"
             android:layout_height="50dp"
             android:background="@drawable/rounded_buttons"
