--- a/app/src/main/res/layout/home_customer.xml
+++ b/app/src/main/res/layout/home_customer.xml
@@ -6,11 +6,11 @@
     android:layout_height="match_parent"
     android:background = "@drawable/login_background"
     android:fitsSystemWindows="true"
-    tools:context=".MainActivity">
+    tools:context=".Home_Customer">
 
     <com.google.android.material.textfield.TextInputEditText
 
-        android:id="@+id/email"
+        android:id="@+id/search_bar"
         android:layout_width="260dp"
         android:layout_height="50dp"
         android:background="@drawable/rounded_buttons"
@@ -22,7 +22,7 @@
         android:background="@drawable/box"
         android:layout_marginTop="70dp"
         android:gravity="center"
-        android:text="TEST"
+        android:text="@string/test"
         android:textColor="@color/black" />
 
 
@@ -32,9 +32,9 @@
         android:layout_height="90dp"
         android:background="@drawable/box"
         android:layout_marginTop="70dp"
-        android:layout_marginLeft= "160dp"
+        android:layout_marginStart= "160dp"
         android:gravity="center"
-        android:text="TEST"
+        android:text="@string/test"
         android:textColor="@color/black" />
 
     <Button
@@ -42,9 +42,9 @@
         android:layout_height="90dp"
         android:background="@drawable/box"
         android:layout_marginTop="70dp"
-        android:layout_marginLeft= "320dp"
+        android:layout_marginStart= "320dp"
         android:gravity="center"
-        android:text="TEST"
+        android:text="@string/test"
         android:textColor="@color/black" />
 
 
