--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,8 +7,8 @@
     android:orientation="vertical"
     android:gravity="center"
     android:padding="15dp"
-    tools:context=".Login"
-    android:background="@drawable/login_background">
+    android:background="@drawable/gradient_background"
+    tools:context=".Login">
 
     <ImageView
         android:id="@+id/imageView"
@@ -23,7 +23,7 @@
         android:textSize="25sp"
         android:textStyle="bold"
         android:gravity="center"
-        android:textColor="#ffffff"
+        android:textColor="@color/white"
         android:layout_marginBottom="27dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -32,7 +32,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="20dp"
-        android:textColorHint="@color/white"
         app:hintEnabled="false"
         android:gravity="center">
 
@@ -42,6 +41,9 @@
             android:layout_height="50dp"
             android:background="@drawable/rounded_buttons"
             android:textColor="@color/white"
+            android:textSize="17sp"
+            android:paddingLeft="12sp"
+            android:textColorHint="@color/white"
             android:hint="@string/email" />
 
     </com.google.android.material.textfield.TextInputLayout>
@@ -50,7 +52,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="20dp"
-        android:textColorHint="@color/white"
         app:hintEnabled="false"
         android:gravity="center">
 
@@ -60,6 +61,9 @@
             android:layout_height="50dp"
             android:background="@drawable/rounded_buttons"
             android:textColor="@color/white"
+            android:textSize="17sp"
+            android:paddingLeft="12sp"
+            android:textColorHint="@color/white"
             android:hint="@string/password" />
 
     </com.google.android.material.textfield.TextInputLayout>
@@ -70,6 +74,7 @@
         android:layout_height="wrap_content"
         android:backgroundTint="@color/white"
         android:text="@string/login"
+        android:background="@drawable/rounded_buttons_white"
         android:textColor="@color/d32966" />
     <TextView
         android:id="@+id/new_sign_up"
