--- a/app/src/main/res/layout/activity_sign_up_seller.xml
+++ b/app/src/main/res/layout/activity_sign_up_seller.xml
@@ -8,7 +8,7 @@
     android:gravity="center"
     android:padding="15dp"
     tools:context=".SignUp_Owner"
-    android:background="@drawable/login_background">
+    android:background="@drawable/gradient_background">
 
     <TextView
         android:text="@string/sign_up"
@@ -25,25 +25,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="20dp"
-        android:textColorHint="@color/white"
-        app:hintEnabled="false"
-        android:gravity="center">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/Store_Name"
-            android:layout_width="260dp"
-            android:layout_height="50dp"
-            android:background="@drawable/rounded_buttons"
-            android:textColor="@color/white"
-            android:hint="@string/store_name" />
-
-    </com.google.android.material.textfield.TextInputLayout>
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
-        android:textColorHint="@color/white"
         app:hintEnabled="false"
         android:gravity="center">
 
@@ -53,7 +34,10 @@
             android:layout_height="50dp"
             android:background="@drawable/rounded_buttons"
             android:textColor="@color/white"
-            android:hint="@string/category" />
+            android:textSize="17sp"
+            android:paddingLeft="12sp"
+            android:textColorHint="@color/white"
+            android:hint="@string/username" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -61,7 +45,58 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="20dp"
+        app:hintEnabled="false"
+        android:gravity="center">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/Store_Name"
+            android:layout_width="260dp"
+            android:layout_height="50dp"
+            android:background="@drawable/rounded_buttons"
+            android:textColor="@color/white"
+            android:textSize="17sp"
+            android:paddingLeft="12sp"
+            android:textColorHint="@color/white"
+            android:hint="@string/store_name" />
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <!--Spinner
+        android:id="@+id/Category"
+        android:layout_width="260dp"
+        android:layout_height="50dp"
+        android:background="@drawable/rounded_buttons"
+        android:layout_marginBottom="20dp"
+        android:textColor="@color/white"
+        android:textSize="17sp"
+        android:paddingLeft="12sp"
         android:textColorHint="@color/white"
+        android:hint="@string/category" /-->
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp"
+        app:hintEnabled="false"
+        android:gravity="center">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/Category"
+            android:layout_width="260dp"
+            android:layout_height="50dp"
+            android:background="@drawable/rounded_buttons"
+            android:textColor="@color/white"
+            android:textSize="17sp"
+            android:paddingLeft="12sp"
+            android:textColorHint="@color/white"
+            android:hint="@string/category" />
+
+    </com.google.android.material.textfield.TextInputLayout >
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp"
         app:hintEnabled="false"
         android:gravity="center">
 
@@ -71,6 +106,9 @@
             android:layout_height="50dp"
             android:background="@drawable/rounded_buttons"
             android:textColor="@color/white"
+            android:textSize="17sp"
+            android:paddingLeft="12sp"
+            android:textColorHint="@color/white"
             android:hint="@string/email" />
 
     </com.google.android.material.textfield.TextInputLayout>
@@ -79,7 +117,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="20dp"
-        android:textColorHint="@color/white"
         app:hintEnabled="false"
         android:gravity="center">
 
@@ -89,6 +126,9 @@
             android:layout_height="50dp"
             android:background="@drawable/rounded_buttons"
             android:textColor="@color/white"
+            android:textSize="17sp"
+            android:paddingLeft="12sp"
+            android:textColorHint="@color/white"
             android:hint="@string/password" />
 
     </com.google.android.material.textfield.TextInputLayout>
@@ -97,7 +137,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="20dp"
-        android:textColorHint="@color/white"
         app:hintEnabled="false"
         android:gravity="center">
 
@@ -107,6 +146,9 @@
             android:layout_height="50dp"
             android:background="@drawable/rounded_buttons"
             android:textColor="@color/white"
+            android:textSize="17sp"
+            android:paddingLeft="12sp"
+            android:textColorHint="@color/white"
             android:hint="@string/confirm_password" />
 
     </com.google.android.material.textfield.TextInputLayout>
@@ -116,6 +158,7 @@
         android:layout_width="260dp"
         android:layout_height="wrap_content"
         android:backgroundTint="@color/white"
+        android:background="@drawable/rounded_buttons_white"
         android:text="@string/sign_up"
         android:textColor="@color/d32966" />
 
