--- a/app/src/main/res/layout/home_customer.xml
+++ b/app/src/main/res/layout/home_customer.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,47 +8,65 @@
     android:fitsSystemWindows="true"
     tools:context=".Home_Customer">
 
-    <com.google.android.material.textfield.TextInputEditText
 
-        android:id="@+id/search_bar"
-        android:layout_width="260dp"
-        android:layout_height="50dp"
-        android:background="@drawable/rounded_buttons"
-        android:textColor="@color/white"
-        android:hint="@string/search" />
-    <Button
+    <androidx.appcompat.widget.SearchView
+        android:id="@+id/searchView"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="8dp"
+        android:background="@drawable/search_background"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.023"
+        app:queryHint="Search"
+        app:iconifiedByDefault="false"/>
+
+    <!--<Button
+        android:id="@+id/button3"
         android:layout_width="90dp"
         android:layout_height="90dp"
         android:background="@drawable/box"
-        android:layout_marginTop="70dp"
         android:gravity="center"
         android:text="@string/test"
-        android:textColor="@color/black" />
-
-
+        android:textColor="@color/black"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.906"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.255" />
 
     <Button
+        android:id="@+id/button2"
         android:layout_width="90dp"
         android:layout_height="90dp"
         android:background="@drawable/box"
-        android:layout_marginTop="70dp"
-        android:layout_marginStart= "160dp"
         android:gravity="center"
         android:text="@string/test"
-        android:textColor="@color/black" />
+        android:textColor="@color/black"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.062" />
 
     <Button
-        android:layout_width="90dp"
-        android:layout_height="90dp"
+        android:id="@+id/button"
+        android:layout_width="86dp"
+        android:layout_height="83dp"
         android:background="@drawable/box"
-        android:layout_marginTop="70dp"
-        android:layout_marginStart= "320dp"
         android:gravity="center"
         android:text="@string/test"
-        android:textColor="@color/black" />
+        android:textColor="@color/black"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.686"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.155" /> -->
 
 
-
-
-
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
