--- a/app/src/main/res/layout/activity_home_seller.xml
+++ b/app/src/main/res/layout/activity_home_seller.xml
@@ -19,6 +19,7 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginTop="70dp"
         android:layout_marginBottom="98dp"
         android:scrollbars="none">
 
