--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -22,7 +22,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:gravity="center"
-        android:text="@string/stop2go"
+        android:text="@string/shop2go"
         android:textColor="#ffffff"
         android:textSize="35sp"
         android:textStyle="bold" />
