--- a/app/src/main/res/layout/card.xml
+++ b/app/src/main/res/layout/card.xml
@@ -23,9 +23,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Product"
-                    android:textColor="@android:color/holo_blue_dark"
+                    android:textColor="@color/endColor"
                     android:textFontWeight="1000"
-                    android:textSize="30dp"/>
+                    android:textSize="21dp"/>
 
                 <Button
                     android:id="@+id/delete_button"
