--- a/app/src/main/res/layout/card.xml
+++ b/app/src/main/res/layout/card.xml
@@ -17,7 +17,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="10dp">
-                
+
                 <TextView
                     android:id="@+id/name"
                     android:layout_width="wrap_content"
@@ -29,10 +29,20 @@
 
                 <Button
                     android:id="@+id/delete_button"
-                    android:layout_width="wrap_content"
+                    android:layout_width="75dp"
                     android:layout_height="wrap_content"
                     android:layout_alignParentEnd="true"
                     android:text="Delete"/>
+
+                <Button
+                    android:id="@+id/edit_button"
+                    android:layout_width="75dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="151dp"
+                    android:layout_marginEnd="14dp"
+                    android:layout_toStartOf="@+id/delete_button"
+                    android:layout_toEndOf="@+id/name"
+                    android:text="@string/edit" />
 
 
             </RelativeLayout>
