--- a/app/src/main/res/layout/card.xml
+++ b/app/src/main/res/layout/card.xml
@@ -42,7 +42,7 @@
                     android:layout_marginEnd="14dp"
                     android:layout_toStartOf="@+id/delete_button"
                     android:layout_toEndOf="@+id/name"
-                    android:text="@string/edit" />
+                    android:text="edit" />
 
 
             </RelativeLayout>
