--- a/app/src/main/res/layout/cart_page.xml
+++ b/app/src/main/res/layout/cart_page.xml
@@ -14,7 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:text="@string/my_cart"
+        android:text="My Cart"
         android:textColor="#ffffff"
         android:textSize="30sp"
         android:textStyle="bold"
@@ -26,13 +26,13 @@
         app:layout_constraintVertical_bias="0.052" />
 
     <Button
-        android:id="@id/order"
+        android:id="@+id/order"
         android:layout_width="263dp"
         android:layout_height="24dp"
         android:layout_gravity="bottom"
         android:background="@drawable/rounded_buttons_white"
         android:backgroundTint="@color/white"
-        android:text="@string/order"
+        android:text="order"
         android:textColor="@color/d32966"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
