--- a/app/src/main/res/layout/activity_home_seller.xml
+++ b/app/src/main/res/layout/activity_home_seller.xml
@@ -32,4 +32,85 @@
         </LinearLayout>
     </ScrollView>
 
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar5"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:background="#e7820e"
+        android:minHeight="?attr/actionBarSize"
+        android:theme="?attr/actionBarTheme"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ImageView
+            android:id="@+id/logo"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_gravity="start"
+            android:contentDescription="@string/stop2go"
+            android:src="@drawable/logo3"
+            app:layout_constraintBottom_toBottomOf="@+id/menu_back"
+            app:layout_constraintEnd_toEndOf="@id/textView2"
+            app:layout_constraintStart_toStartOf="@+id/textView2"
+            app:layout_constraintTop_toTopOf="@+id/menu_back" />
+
+        <ImageButton
+            android:id="@+id/home_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:backgroundTint="@color/Transparency"
+            android:contentDescription="@string/home"
+            android:src="@drawable/home_button"
+            app:layout_constraintBottom_toBottomOf="@+id/menu_back"
+            app:layout_constraintEnd_toStartOf="@+id/orders_button"
+            app:layout_constraintStart_toEndOf="@+id/textView2"
+            app:layout_constraintTop_toTopOf="@+id/menu_back" />
+
+        <ImageButton
+            android:id="@+id/orders_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:backgroundTint="@color/Transparency"
+            android:contentDescription="@string/orders"
+            android:src="@drawable/orders_button"
+            app:layout_constraintBottom_toBottomOf="@+id/menu_back"
+            app:layout_constraintEnd_toStartOf="@+id/my_orders_button"
+            app:layout_constraintStart_toEndOf="@+id/home_button"
+            app:layout_constraintTop_toTopOf="@+id/menu_back" />
+
+        <ImageButton
+            android:id="@+id/my_orders_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:backgroundTint="@color/Transparency"
+            android:contentDescription="@string/my_orders"
+            android:src="@drawable/my_orders_button"
+            app:layout_constraintBottom_toBottomOf="@+id/menu_back"
+            app:layout_constraintEnd_toStartOf="@+id/account_button"
+            app:layout_constraintStart_toEndOf="@+id/orders_button"
+            app:layout_constraintTop_toTopOf="@+id/menu_back" />
+
+        <ImageButton
+            android:id="@+id/account_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:backgroundTint="@color/Transparency"
+            android:contentDescription="@string/accounts"
+            android:src="@drawable/account_button"
+            app:layout_constraintBottom_toBottomOf="@+id/menu_back"
+            app:layout_constraintEnd_toEndOf="@+id/menu_back"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toEndOf="@+id/my_orders_button"
+            app:layout_constraintTop_toTopOf="@+id/menu_back" />
+
+    </androidx.appcompat.widget.Toolbar>
+
 </RelativeLayout>
