--- a/app/src/main/res/layout/home_seller.xml
+++ b/app/src/main/res/layout/home_seller.xml
@@ -6,67 +6,7 @@
     android:layout_height="match_parent"
     android:background="@drawable/login_background"
     android:fitsSystemWindows="true"
-    tools:context=".home_customer">
-
-
-    <!--androidx.appcompat.widget.SearchView
-        android:id="@+id/searchView"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        android:background="@drawable/search_background"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.023"
-        app:queryHint="Search"
-        app:iconifiedByDefault="false"/-->
-
-    <!--<Button
-        android:id="@+id/button3"
-        android:layout_width="90dp"
-        android:layout_height="90dp"
-        android:background="@drawable/box"
-        android:gravity="center"
-        android:text="@string/test"
-        android:textColor="@color/black"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.906"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.255" />
-
-    <Button
-        android:id="@+id/button2"
-        android:layout_width="90dp"
-        android:layout_height="90dp"
-        android:background="@drawable/box"
-        android:gravity="center"
-        android:text="@string/test"
-        android:textColor="@color/black"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.062" />
-
-    <Button
-        android:id="@+id/button"
-        android:layout_width="86dp"
-        android:layout_height="83dp"
-        android:background="@drawable/box"
-        android:gravity="center"
-        android:text="@string/test"
-        android:textColor="@color/black"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.686"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.155" /> -->
+    tools:context=".home_seller">
 
 
     <androidx.appcompat.widget.Toolbar
@@ -114,8 +54,8 @@
             android:layout_height="wrap_content"
             android:layout_gravity="end"
             android:backgroundTint="@color/Transparency"
-            android:contentDescription="@string/cart"
-            android:src="@drawable/cart_button"
+            android:contentDescription="@string/orders"
+            android:src="@drawable/orders_button"
             app:layout_constraintBottom_toBottomOf="@+id/menu_back"
             app:layout_constraintEnd_toStartOf="@+id/my_orders_button"
             app:layout_constraintStart_toEndOf="@+id/home_button"
