--- a/app/src/main/res/layout/activity_product_edit_page.xml
+++ b/app/src/main/res/layout/activity_product_edit_page.xml
@@ -25,10 +25,10 @@
 
 
     <EditText
-        android:id="@+id/price"
+        android:id="@+id/price_label"
         android:layout_width="300dp"
         android:layout_height="60dp"
-        android:background="@drawable/custom_input"
+        android:background="@drawable/rounded_buttons"
         android:drawableStart="@drawable/ic_price"
         android:drawablePadding="12dp"
         android:ems="10"
@@ -47,10 +47,10 @@
         app:layout_constraintVertical_bias="0.326" />
 
     <EditText
-        android:id="@+id/quantity"
+        android:id="@+id/quantity_label"
         android:layout_width="300dp"
         android:layout_height="60dp"
-        android:background="@drawable/custom_input"
+        android:background="@drawable/rounded_buttons"
         android:drawableStart="@drawable/ic_quantity"
         android:drawablePadding="12dp"
         android:ems="10"
@@ -69,11 +69,11 @@
         app:layout_constraintVertical_bias="0.447" />
 
     <EditText
-        android:id="@+id/description"
+        android:id="@+id/description_label"
         android:inputType="textLongMessage"
         android:layout_width="300dp"
         android:layout_height="60dp"
-        android:background="@drawable/custom_input"
+        android:background="@drawable/rounded_buttons"
         android:drawableStart="@drawable/ic_description"
         android:drawablePadding="12dp"
         android:textColorHint="@color/white"
