--- a/app/src/main/res/layout/card2.xml
+++ b/app/src/main/res/layout/card2.xml
@@ -32,7 +32,7 @@
                     android:layout_marginTop="13dp"
                     android:layout_marginEnd="228dp"
                     android:layout_marginBottom="38dp"
-                    android:text="@string/product_name"
+                    android:text="@string/product"
                     android:textColor="@color/endColor"
                     android:textFontWeight="1000"
                     android:textSize="21dp" />
