--- a/app/src/main/res/layout/dialog.xml
+++ b/app/src/main/res/layout/dialog.xml
@@ -11,15 +11,16 @@
         android:layout_marginRight="20dp"
         android:layout_marginTop="10dp">
 
-        
+
         <EditText
             android:id="@+id/edit_product_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Product"
-            android:textSize="20dp"/>
+            android:textSize="20dp"
+            android:singleLine="true"/>
 
     </RelativeLayout>
-        
+
 
 </RelativeLayout>
